Done with Colette's comments

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -63,7 +63,7 @@ corresponding author: [j.palacio\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.ca
 
 <!-- An opening sentence that states the question/problem addressed by the research AND Enough background content to give context to the study AND A brief statement of primary results AND A short concluding sentence. -->
 
-**Climate change is shifting the distribution of shared fish stocks between neighboring countries and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance.** By coupling a large ensemble simulation of an Earth system model to a species distribution model, we show that 78% the world’s Exclusive Economic Zones will experience at least one shifting transboundary stock by 2030. By 2100, 45% of stocks would have shifted out of 81% of countries/political entities waters under a high emissions scenario. Importantly, hotspots for transboundary shifts occur for countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts in fish stocks highlights the urgent need to re-formulate international fisheries policies to limit conflict over these fish stocks. **A strong expansion of bi- and multi-lateral actions**
+**Climate change is shifting the distribution of shared fish stocks between neighboring countries’ Exclusive Economic Zones (EEZ) and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance.** Coupling a large ensemble simulation of an Earth system model to a species distribution model, we show that 78% of the world will experience at least one shifting transboundary stock by 2030. By 2100, 45% of stocks would have shifted out of 81% of EEZ waters under a high emissions scenario. Importantly, many countries that are highly dependent on fisheries for income, food and nutrition security, as well as livelihoods emerge as hotspots for transboundary shifts. The imminent onset of transboundary shifts in fish stocks highlights the urgent need to re-formulate international fisheries policies to limit conflict over these fish stocks. **A strong expansion of bi- and multi-lateral actions.**
 
 <!-- **One-Sentence Summary** -->
 
@@ -93,7 +93,7 @@ grid.raster(img)
 
 **Identifying range shifts in the shared distribution of transboundary stocks**
 
-**Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), with the first shift modelled to have occurred back in 2006.** This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with 78% recording a distributional shift in stocks by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
+**Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), with the first shift modelled to have occurred back in 2006.** This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift by 2100 with 78% recording a distributional shift in stocks by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
 ```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) whose distribution centroids that have shifted beyond natural variations over time (from 2006 to >2100), (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one stock shifting beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (see Methods), respectively."}
 
@@ -108,7 +108,7 @@ The median year in which transboundary stocks experience a range shift varied si
 On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of annual revenue from fisheries targeting **transboundary** stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). **From all fisheries targeting transboundary stocks between 2004 and 2010 in the global EEZs, shifting stocks represented on average 23% (s.d. $\pm$  22%) of the yearly revenue (Fig. \@ref(fig:toeFigure2)A).** However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
 
 
-```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "**Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. Warm colours are indicative of an early shift/high fishing revenue contribution from transboundary stocks while cool colours represent a late shift/low fishing revenue. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the average year of range shift. Horizontal dashed line represents the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
+```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "**Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. Warm colors are indicative of an early shift/high fishing revenue contribution from transboundary stocks while cool colors represent a late shift/low fishing revenue. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represents the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
 
 img <- readPNG("../Figures/Fig3.png")
 grid.raster(img)
@@ -117,7 +117,7 @@ grid.raster(img)
 
 <!-- ![toeFigure 2. Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygon shows the contribution of shifting stocks to the country’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons represent average range shifts per EEZ. EEZs with no time of emergence between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by region according to United Nations sub-regions. Points represent the median year of range shift. Horizontal dashed line represents the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand](../Figures/Fig3.png) -->
 
-We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs. Within five years of the UN 2030 Agenda, 979 transboundary stocks accounting for USD 5.3 billion in fishing revenue are projected to shift within 76 EEZs (Fig. \@ref(fig:toeFigure3)); with 4.2 billion USD accounted by 321 stocks shifting in just eleven countries (Fig. \@ref(fig:toeFigure3)). The number of transboundary stocks shifting from historical variability was highest in the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66) (Fig. \@ref(fig:toeFigure3)).
+We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs. Within five years of the UN 2030 Agenda timeline, 979 transboundary stocks accounting for USD 5.3 billion in fishing revenue are projected to shift within 76 EEZs (Fig. \@ref(fig:toeFigure3); above Fisheries >75th percentile); with 4.2 billion USD accounted by 321 stocks shifting in just eleven countries (Fig. \@ref(fig:toeFigure3)). The number of transboundary stocks shifting from historical variability was highest in the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66) (Fig. \@ref(fig:toeFigure3)).
 
 
 ```{r toeFigure3, eval = T,  echo = F, fig.width=8, fig.height=6, fig.pos= "H", fig.cap =  "**Average range shift of transboundary stocks and corresponding fishing revenue per country. Countries are coded according to different colored symbols representative of 5 distinct regions. The horizontal line separates countries above and below the 75th percentile of annual fishing revenue. Showing country names for the eleven nations above the 75th percentile and projected to have an average shift across transboundary stocks within its EEZ within 5 years of the 2030 Agenda deadline."}
@@ -131,7 +131,7 @@ grid.raster(img)
 
 <!-- We based the transboundary index on a stock’s centroid defined as the average grid cells that contain the majority of a stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method is robust to the abundance level (e.g., the top 95%) of the stock (Fig. \@ref(fig:toeFigureS3)). In addition, we set an arbitrary threshold of 2 s.d. (95% confidence) to determine the time of emergence of the transboundary index. Sensitivity tests to a lower threshold of 1 s.d. (for a 68% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27, a difference of about 7 years (Fig. \@ref(fig:toeFigureS4)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks. SENT TO METHODS!!!! -->
 
-We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). **Findings show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks is projected to change beyond an EEZ’s historic proportion (i.e., between 2004 and 2010;** Fig. \@ref(fig:toeFigure4)A). Moreover, 85% (n = 239) of the world's EEZs will have experienced changes in catch proportion of transboundary stocks by 2030. **There will be an increase in the number of stocks changing their catch proportion and the number of EEZs with changing stocks towards the mid-21st century. Such increase will be followed by an increase in the intensity of the proportion that changes (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**
+We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). **Projections show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks will change beyond historic variability experinced within an EEZ’s (Fig. \@ref(fig:toeFigure4)A).** Moreover, 85% (n = 239) of the world’s EEZs will have experienced changes in catch proportion of transboundary stocks by 2030. **By mid-21st century, the number of EEZs with changing stocks, as well as the number of stocks experiencing changes in catch proportion and the magnitude of that change will increase (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. 5A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, shifts in stocks are expected to benefit poleward EEZs. However, shifts along the coasts of Pacific Central America and West Africa occur in an equatorial direction. The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, the proportion of the stock is expected to follow a projected poleward shift. However, shifts in the coasts of Pacific Central America and West Africa occur along an equatorial direction.
 
 ```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "**Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005.** Lines represent the average change in transboundary stock share ratio (Methods) with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio (i.e., over two standard deviations from the historical catch proportion) beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
 
@@ -142,28 +142,29 @@ grid.raster(img)
 
 <!-- ![Figure 1. Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors (green to yellow). Panel B zooms into specific areas shown within the gray dashed line boundaries in A.](../Figures/Fig1.png) -->
 
-The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, the proportion of the stock is expected to follow a projected poleward shift. However, shifts in the coasts of Pacific Central America and West Africa occur along an equatorial direction. Here, transboundary species follow specific oceanographic regions (*sensu* Longhurst) like upwelling zones (e.g., Humboldt current) and local patterns of oxygen availability, in addition to temperature gradients. Regions where EEZs are relatively small and have multiple borders (e.g., Caribbean or Northwestern Europe) are expected to have a particularly complex exchange of stock share ratio with no clear established pattern (Fig. \@ref(fig:toeFigure4)B).
+<!-- The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, the proportion of the stock is expected to follow a projected poleward shift. However, shifts in the coasts of Pacific Central America and West Africa occur along an equatorial direction. Here, transboundary species follow specific oceanographic regions (*sensu* Longhurst) like upwelling zones (e.g., Humboldt current) and local patterns of oxygen availability, in addition to temperature gradients. Regions where EEZs are relatively small and have multiple borders (e.g., Caribbean or Northwestern Europe) are expected to have a particularly complex exchange of stock share ratio with no clear established pattern (Fig. \@ref(fig:toeFigure4)B). -->
 
 <!-- ## Discussion -->
 
 <!-- In this paper, we investigate the timing and intensity associated with changes in the share distribution of transboundary stocks between countries. Our findings highlight an early distributional shift from historical variations for most transboundary stocks in the world. Such early shifts point to the urgency of addressing the challenges that climate change presents for international fisheries management. Moreover, we identify regional patterns of high climate risk to important fish stocks and associated fisheries that would benefit from immediate policy responses to support sustainability into the future. Finally, we show that for many countries changes in the distribution of transboundary stocks are likely to undermine joint resource management between countries [@Bailey:2010ga; @Munro:1979dg; @PalaciosAbrantes:2020vt; @Bailey:2016eh]. Thus, our findings emphasize recent calls for the urgent adoption of adaptation measures in support of more adaptive, flexible fisheries management and governance to support resilient fisheries and durable management systems [@Pinsky:2018cb; @Pinsky:2020jx; @CisnerosMata:2019ks; @Oremus:2020id; @Free:2019jq]. -->
 
-**High present-day climate risk of transboundary fisheries management**
+**High present-day climate risk for transboundary fisheries**
 
-Our findings highlighting early shifts in the shared distribution of transboundary stocks concur with previous studies that have detected changes in marine catch composition and attributed these to climate change [e.g., @Cheung:2013gk; @Frainer:2017ji; @Last:2011fd]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US), in response to climatic, and associated oceanographic and ecological changes [@Zeidberg:2007gs]. A new fishery targeting Humboldt squid quickly developed on the heels of the species’ range expansion [@Pinsky:2014by]. In the northeast Atlantic, fisheries on Atlantic mackerel (*Scomber scombrus*) are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel due to environmental variation into Icelandic waters in 2007 resulted in Iceland capturing 6% of the fishery’s total allowable catch and a further 18% in 2008, without consultation with NEAFC, threatening the sustainability of the stock [@Spijkers:2017ij]. These changes resulted in disputes between Iceland and the Faroe Islands, as well as among NEAFC member states [@Spijkers:2017ij]. **Early range expansions across international jurisdictions have also been documented for multiple stocks along the European Union regulatory areas [@Baudron:2020dj], the Benguela Current [@Potts:2014bq; @Yemane:2014jg], and the southwest South Atlantic Ocean [@Franco:2020bk]. While these represent some of the documented cases of species shifting across jurisdictions, to date is not very clear which and how many transboundary stocks are shifting, where are they shifting and whether they are jointly managed. Monitoring present and future shifts in the distribution of transboundary stocks is key to achieve sustainable goals as shifts in distributions are likely to increase the frequency of international disputes and decrease stocks’ health [@Pinsky:2018cb; @Engler:2020bg; @Oremus:2020id]. This is particularly true as climate change continues to change the distribution of transboundary stocks to a point that some EEZs will see new transboundary stocks [@Oremus:2020id] while others will stand to lose them completely [@Pinsky:2018cb].**
+Our findings highlighting early shifts in the shared distribution of transboundary stocks concur with previous studies that have detected changes in marine catch composition and attributed these to climate change [e.g., @Cheung:2013gk; @Frainer:2017ji; @Last:2011fd]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US), in response to climatic, and associated oceanographic and ecological changes [@Zeidberg:2007gs]. A new fishery targeting Humboldt squid quickly developed on the heels of the species’ range expansion [@Pinsky:2014by]. In the northeast Atlantic, fisheries on Atlantic mackerel (*Scomber scombrus*) are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel due to environmental variation into Icelandic waters in 2007 resulted in Iceland capturing 6% of the fishery’s total allowable catch and a further 18% in 2008, without consultation with NEAFC, threatening the sustainability of the stock [@Spijkers:2017ij]. These changes resulted in disputes between Iceland and the Faroe Islands, as well as among NEAFC member states [@Spijkers:2017ij]. **Other documented cases of early range expansions across international jurisdictions have also been documented for multiple stocks along the European Union regulatory areas [@Baudron:2020dj], the Benguela Current [@Potts:2014bq; @Yemane:2014jg], and the southwest South Atlantic Ocean [@Franco:2020bk]. Despite these documented cases, broadly speaking, there is a lack of information and data regarding which and how many transboundary stocks are shifting, where they are shifting to and whether they are jointly managed. This is particularly important as modeling exercises project that climate change will continue to change the distribution of transboundary stocks to the point that some tropical EEZs will lose them completely [@Oremus:2020id] while other EEZs, mainly in higher latitudes, will stand to win new stocks [@Pinsky:2018cb].**
+
 
 **Climate risk hotspots for transboundary fisheries management**
 
 Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figures \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Regions such as the Caribbean are characterized by high levels of warming relative to historical natural variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively low area EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei]. Thus, coordinating the management of shifting transboundary stocks for countries in these regions will be particularly challenging. 
 
-**Most management plans that are not designed or prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Focusing on identified “hotspots” will help anticipate any potential increases in and averting fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments (including non-monetary arrangements) [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include: the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) and which has a conservation fund functioning as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States, which as the name implies manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt]; and the Parties to the Nauru Agreement (PNA) an Oceania subregional agreement among 8 Pacific Island countries and Tokelau, which collectively manage the largest tuna fishery in the world, controlling around 50% of the global supply of skipjack tuna (*Katsuwonus pelamis*). The PNA manage fishing effort under a so-called Vessel Day Scheme, an adaptive and equitable system which accounts for shifts in stocks and catches as a result of climate variability [@Aqorau:2018bh]. Quota allocation methods based on a stock’s current distribution and/or according to fixed-historical proportions like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp].**
+**Most management plans that are not designed or prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Focusing on identified “hotspots” will help anticipate any potential increases in and averting fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments (including non-monetary arrangements) [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include: the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) and which has a conservation fund functioning as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States, which as the name implies manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt]; and the Parties to the Nauru Agreement (PNA) an Oceania subregional agreement among 8 Pacific Island countries and Tokelau, which collectively manage the largest tuna fishery in the world, controlling around 50% of the global supply of skipjack tuna (*Katsuwonus pelamis*). The PNA manage fishing effort under a so-called Vessel Day Scheme, an adaptive and equitable system which accounts for shifts in stocks and catches as a result of climate variability [@Bahri:2021wz]. Quota allocation methods based on a stock’s current distribution and/or according to fixed-historical proportions like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp].**
 
-**Even management plans that take into consideration such strategies might not be fully prepared for the consequences of shifting transboundary stocks [@Pinsky:2018cb; @Koubrak:2020hw; @Engler:2020bg]. For example, species’ shifts within the PNA area will likely also have to deal with stocks expanding to new jurisdictions, issue that the NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Moreover, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from a fishery they have historically been entitled to. Finally, changes in policy can take years (e.g., it took the PST about 10 years to agree on a conservation fund) and sometimes, the time of political change is longer than that of species shifts [@Pinsky:2012kq]. This is specifically true we could be missing shifting stocks as we lack standardized data to track shifts across international jurisdictions [@Maureaud:2021gj]. Moreover, recent efforts looking at international fisheries plans found that all 127 plans lacked direct actions to address topics of climate change or species range shifts across jurisdictions. Furthermore, authors were rarely able to identify the stock in question, and when they did, it was as broad as skipjack tuna or billfishes [@Oremus:2020id]. Having a better understanding of what stocks are managed as transboundary and under what rules would be an important complement to our study and an important step towards the sustainability of international stocks.**
+**Even management plans that take into consideration such strategies might not be fully prepared for the consequences of shifting transboundary stocks [@Pinsky:2018cb; @Koubrak:2020hw; @Engler:2020bg]. For example, species’ shifts within the PNA area will likely also have to deal with stocks expanding to new jurisdictions, issue that the NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Moreover, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from a fishery they have historically been entitled to. Finally, changes in policy can be sluggish (e.g., it took the PST about 10 years to agree on a conservation fund) compared to the timeframe over which species shift [@Pinsky:2012kq]. This is specifically true as in many cases we lack standardized data to track shifts of species across international jurisdictions [@Maureaud:2021gj] as these might already be happening. Addressing shifting transboundary stocks is also challenged by an overall lack of knowledge of how many international agreements exist or what transboundary stocks are jointly managed. Recent efforts looking at 127 international fisheries plans found that they all lacked direct actions to address topics of climate change or species range shifts across jurisdictions [@Oremus:2020id]. Having a better understanding of what stocks are managed as transboundary and under what rules would be an important complement to our study and an important step towards the sustainability of international stocks. [@Oremus:2020id].**
 
 **Potential drivers of shift and managing an uncertain future**
 
 The early projected range shifts of large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability. For example, sea surface temperature (SST) is projected to increase beyond historical variability by 2030 in 50 to 70% of the global ocean [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Results from multiple marine ecosystem models show that SST and primary production (NPP) are the main indicators of species distributional changes across ocean basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically, in the species distribution model used here (see methods), SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems, while NPP drives temperate regions’ results. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics, where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2019tn], while also explaining the later, and sometimes non-existent, shifts at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
-Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species.**Thus, any mitigation efforts could result in a substantial delay in distribution shifts as environmental signals are sensitive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg].** Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process-level understanding. It is unlikely that these complex uncertainties will adequately be addressed in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf]. These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
+Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species.**Thus, any mitigation efforts could result in a substantial delay in distribution shifts as environmental signals are responsive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg].** Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process-level understanding. It is unlikely that these complex uncertainties will adequately be addressed in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf]. These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
 
 **Conclusion**
 
